--- a/file_tree.html
+++ b/file_tree.html
@@ -35,6 +35,7 @@ summary{cursor:pointer}</style>
 <li><a href=".\.bu\apple.html">apple.html</a></li>
 <li><a href=".\.bu\fontcss.html">fontcss.html</a></li>
 <li><a href=".\.bu\fontcss.n.html">fontcss.n.html</a></li>
+<li><a href=".\.bu\gadgets.html">gadgets.html</a></li>
 <li><a href=".\.bu\goatori.html">goatori.html</a></li>
 <li><a href=".\.bu\grd.html">grd.html</a></li>
 <li><a href=".\.bu\index-part.txt">index-part.txt</a></li>
@@ -98,6 +99,7 @@ summary{cursor:pointer}</style>
 <li><a href=".\academic\5065note.md">5065note.md</a></li>
 <li><a href=".\academic\535hw9.html">535hw9.html</a></li>
 <li><a href=".\academic\535sp23note.html">535sp23note.html</a></li>
+<li><a href=".\academic\opt.html">opt.html</a></li>
 </ul>
 </details>
 <details>
@@ -127,6 +129,19 @@ summary{cursor:pointer}</style>
 </ul>
 </details>
 <details>
+<summary>blog</summary>
+<ul>
+<li><a href=".\blog\build.py">build.py</a></li>
+<li><a href=".\blog\index.css">index.css</a></li>
+<li><a href=".\blog\index.html">index.html</a></li>
+<li><a href=".\blog\index.js">index.js</a></li>
+<li><a href=".\blog\Restart.md">Restart.md</a></li>
+<li><a href=".\blog\The Power of Design.md">The Power of Design.md</a></li>
+<li><a href=".\blog\[20240212]My favorite textbook.md">[20240212]My favorite textbook.md</a></li>
+<li><a href=".\blog\[20240320]My MBTI.md">[20240320]My MBTI.md</a></li>
+</ul>
+</details>
+<details>
 <summary>ceeproj</summary>
 <ul>
 <li><a href=".\ceeproj\index.html">index.html</a></li>
@@ -151,6 +166,7 @@ summary{cursor:pointer}</style>
 <li><a href=".\fonts\Akkurat-Regular.otf">Akkurat-Regular.otf</a></li>
 <li><a href=".\fonts\apple_tc.ttf">apple_tc.ttf</a></li>
 <li><a href=".\fonts\aptos.ttf">aptos.ttf</a></li>
+<li><a href=".\fonts\Arimo-VariableFont_wght.ttf">Arimo-VariableFont_wght.ttf</a></li>
 <li><a href=".\fonts\AtlasGrotesk-Medium.otf">AtlasGrotesk-Medium.otf</a></li>
 <li><a href=".\fonts\AtlasGrotesk-Regular.otf">AtlasGrotesk-Regular.otf</a></li>
 <li><a href=".\fonts\BDLifelessGrotesk.ttf">BDLifelessGrotesk.ttf</a></li>
@@ -214,6 +230,8 @@ summary{cursor:pointer}</style>
 <li><a href=".\fonts\sneak.ttf">sneak.ttf</a></li>
 <li><a href=".\fonts\sohne.otf">sohne.otf</a></li>
 <li><a href=".\fonts\SuisseIntl-Regular.ttf">SuisseIntl-Regular.ttf</a></li>
+<li><a href=".\fonts\Universal-Sans-400.woff2">Universal-Sans-400.woff2</a></li>
+<li><a href=".\fonts\UniversalSans-Regular.woff2">UniversalSans-Regular.woff2</a></li>
 <li><a href=".\fonts\UniversalSansDisplayGX.woff2">UniversalSansDisplayGX.woff2</a></li>
 <li><a href=".\fonts\VulfSans-Regular.ttf">VulfSans-Regular.ttf</a></li>
 </ul>
@@ -309,6 +327,20 @@ summary{cursor:pointer}</style>
 <li><a href=".\mkdocs\mkdocs.yml">mkdocs.yml</a></li>
 </ul>
 </details>
+<details>
+<summary>simpleIndex</summary>
+<ul>
+<li><a href=".\simpleIndex\general.css">general.css</a></li>
+<li><a href=".\simpleIndex\index.html">index.html</a></li>
+</ul>
+</details>
+<details>
+<summary>widgets</summary>
+<ul>
+<li><a href=".\widgets\index.html">index.html</a></li>
+<li><a href=".\widgets\widgets.css">widgets.css</a></li>
+</ul>
+</details>
 <li><a href=".\.gitignore">.gitignore</a></li>
 <li><a href=".\404.html">404.html</a></li>
 <li><a href=".\cyb.html">cyb.html</a></li>
@@ -330,6 +362,7 @@ summary{cursor:pointer}</style>
 <li><a href=".\log.html">log.html</a></li>
 <li><a href=".\notyet.html">notyet.html</a></li>
 <li><a href=".\proj.html">proj.html</a></li>
+<li><a href=".\push.bat">push.bat</a></li>
 <li><a href=".\sb.html">sb.html</a></li>
 <li><a href=".\timeline.css">timeline.css</a></li>
 <li><a href=".\yafiwg.py">yafiwg.py</a></li>
