--- a/widgets/index.html
+++ b/widgets/index.html
@@ -14,7 +14,7 @@
 
 /* h1:hover::after, */
 :root{
-font-family: "Arimo", serif;
+font-family: "zilla", serif;
 /* font-family: Inter, sans-serif; */
 /* font-feature-settings: 'liga' 1, 'calt' 1, 'ccmp' 1;  */
 -webkit-font-smoothing: antialiased;
