--- a/.bu/gadgets.html
+++ b/.bu/gadgets.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://xolyn.github.io/font.css">
-    <title>Document</title>
+    <title>gadgets</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Reddit+Mono:wght@200..900&display=swap');
         .btn{
