--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@ margin: .25rem 0;
 }
 
 tr>td:first-child{
-    width: 65%;
+    width: 35%;
 }
 
 tr>td:nth-child(2){
-    width: 35%;
+    width: 65%;
     text-align: right;
 }
 
@@ -267,20 +267,20 @@ background-color: var(--bc); color:var(--tc); padding: 2vh var(--hp);z-index: 3;
     <table id="edutable" style="border: none;" cellspacing="0" cellpadding="0">
         <tbody>
         <tr>
-            <td> <a href="http://cornell.edu/">Cornell University</a></td>
             <td>Master's</td>
+            <td> <a href="http://cornell.edu/">Cornell University</a></td>
         </tr>
         <tr>
-            <td><a href="http://wisc.edu/">University of Wisconsin - Madison</a></td>
             <td>Bachelor's</td>
+            <td><a href="http://wisc.edu/">University of Wisconsin - Madison</a></td>
         </tr>
         <tr>
-            <td><a href="http://www.jzhx.net/">Jinling High School Hexi Campus</a></td>
             <td>High School</td>
+            <td><a href="http://www.jzhx.net/">Jinling High School Hexi Campus</a></td>
         </tr>
         <tr>
-            <td><a href="http://njjlhw.njgljy.com/">Nanjing Jinling Huiwen School</a></td>
             <td>Middle School</td>
+            <td><a href="http://njjlhw.njgljy.com/">Nanjing Jinling Huiwen School</a></td>
         </tr>
         </tbody>
     </table>
@@ -386,9 +386,9 @@ background-color: var(--bc); color:var(--tc); padding: 2vh var(--hp);z-index: 3;
         
     </li>
     <li>
-        <span>Purchasing practices and labor outcomes in global supply chains</span>
+        <span>Purchasing Practices and Labor Outcomes in Global Supply Chains</span>
         <p>
-            <i>British Journal ofIndustrial Relations</i>, <span style="color: grey;">under review</span><br>
+            <i>British Journal of Industrial Relations</i>, <span style="color: grey;">under review</span><br>
             Sarosh Kuruvilla, Chunyun Li, Lingyu Zhou
         </p>
     </li>
@@ -416,7 +416,7 @@ background-color: var(--bc); color:var(--tc); padding: 2vh var(--hp);z-index: 3;
 
 <article id="contact">
     <h1 style="">contact</h1>
-    <p>
+    <!-- <p>
         <div style="color:gray">email</div>
         <div>lz568 [at] cornell [dot] edu</div><br>
         <div style="color:gray">github</div>
@@ -429,40 +429,40 @@ background-color: var(--bc); color:var(--tc); padding: 2vh var(--hp);z-index: 3;
         <div><a href="https://x.com/uygniluohz">@uygniluohz</a></div><br>
         <div style="color:gray">weibo</div>
         <div> <a href="https://weibo.com/u/5663761733">@donth8</a></div><br>
-    </p>
+    </p> -->
 
-    <!-- <table id="edutable" style="border: none;" cellspacing="0" cellpadding="0">
+    <table id="edutable" style="border: none;" cellspacing="0" cellpadding="0">
         <tbody>
-        <tr>
+        <tr>    
             <td>email</td>
             <td>lz568 [at] cornell [dot] edu</td>
         </tr>
 
         <tr>
             <td>github</td>
-            <td><a href="http://wisc.edu/">@xolyn</a></td>
+            <td><a href="https://github.com/xolyn">@xolyn</a></td>
         </tr>
 
         <tr>
             <td>linkedin</td>
-            <td> <a href="http://cornell.edu/">@lingyuzhou</a></td>
+            <td> <a href="https://www.linkedin.com/in/lingyuzhou/">@lingyuzhou</a></td>
         </tr>
 
         <tr>
             <td>instagram</td>
-            <td><a href="http://njjlhw.njgljy.com/">@toqurdn</a></td>
+            <td><a href="https://instagram.com/toqurdn">@toqurdn</a></td>
         </tr>
         <tr>
             <td>X (fka. twitter)</td>
-            <td><a href="http://www.jzhx.net/">@uygniluohz</a></td>
+            <td><a href="https://x.com/uygniluohz">@uygniluohz</a></td>
         </tr>
 
         <tr>
             <td>weibo</td>
-            <td> <a href="http://cornell.edu/">@donth8</a></td>
+            <td> <a href="https://weibo.com/u/5663761733">@donth8</a></td>
         </tr>
         </tbody>
-    </table> -->
+    </table>
 </article>
 
 <article>
