--- a/fontcss.html
+++ b/fontcss.html
@@ -505,6 +505,16 @@ width="15px" height="15px" viewBox="0 0 512 400" version="1.1" xmlns="http://www
             <legend >karla</legend>
             <div style="font-family:karla;" class="usrtxt" contenteditable ></div>
         </fieldset>
+
+        <fieldset>
+            <legend >RM Neue</legend>
+            <div style="font-family:RM Neue;" class="usrtxt" contenteditable ></div>
+        </fieldset>
+
+        <fieldset>
+            <legend >basier</legend>
+            <div style="font-family:basier;" class="usrtxt" contenteditable ></div>
+        </fieldset>
     </div>
 
 </article>
