--- a/log.html
+++ b/log.html
@@ -8,14 +8,16 @@
     <link rel='stylesheet' href='https://xolyn.github.io/font.css'>
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500;700&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap');
+        :root{font-size: smaller;}
         a{color:rgba(0, 0, 0, 0.7); transition: .5s;}
         a:hover{color:inherit}
-        code{font-family: "monolisa"; letter-spacing:0px;
+        code{font-family: "JetBrains Mono", monospace; letter-spacing:0px;
         /* background-color: rgba(211,211,211,0.7); border-radius: 5px; */
       }
     </style>
 </head>
-<body style="margin: 5vh 5vw; font-family: inter;">
+<body style="margin: 5vh 5vw; font-family: arimo;">
     <h2 style="font-weight: normal;">update log of <a href="https://zhoulingyu.net"><code>zhoulingyu.net</code></a></h2>
     <table class="timeline">
         <tr>
@@ -24,7 +26,7 @@
         </tr>
 
         <tr>
-            <td><code>1.0.9</code><br><div style="background-color: lightgray; border-radius: 99px; padding:8px 3px; font-size: xx-small; text-align: center;">scheduled</div></td>
+            <td><code>1.0.9</code><br><div style="background-color: #eee; border-radius: 99px; padding:10px; font-size: xx-small; text-align: center;">scheduled</div></td>
             <td>
                   <ul>
                     <li>update the description in <code>meta</code> tag under <code>header</code></li>
