--- a/fontcss.html
+++ b/fontcss.html
@@ -146,6 +146,10 @@ legend#var::after{
     content: "＊";
 }
 
+input#fontSearch:focus{
+    outline: none;
+}
+
 </style>
 
 <script>
@@ -228,17 +232,6 @@ width="15px" height="15px" viewBox="0 0 512 400" version="1.1" xmlns="http://www
 </div>
 
 </article>
-<!--     
-<div class="cb" style="max-width: 100%; border-top: 1px lightgrey solid;">
-<svg style="cursor: pointer; transition: .3s;" onclick="showInstant();navigator.clipboard.writeText(csstxt); "
-width="15px" height="15px" viewBox="0 0 512 400" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <title>copy</title> <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"> <g id="copy" fill="#000000" transform="translate(85.333333, 42.666667)"> <path d="M341.333333,85.3333333 L341.333333,405.333333 L85.3333333,405.333333 L85.3333333,85.3333333 L341.333333,85.3333333 Z M298.666667,128 L128,128 L128,362.666667 L298.666667,362.666667 L298.666667,128 Z M234.666667,7.10542736e-15 L234.666667,42.6666667 L42.6666667,42.6666667 L42.6666667,298.666667 L1.42108547e-14,298.666667 L1.42108547e-14,7.10542736e-15 L234.666667,7.10542736e-15 Z"> </path> </g> </g> </g></svg>
-<span id="instant" style="font-size: x-small; color: grey;">Copied.</span>
-<pre class="prettyprint lang-html" style="border: 0px; padding: 1.5em var(--rm) 1.5em var(--rm);" translate="no">
-&lt;link rel="preconnect" href="https://xolyn.github.io/"> &lt;!-- expedite loading, optional --&gt;
-&lt;link rel="stylesheet" href="https://xolyn.github.io/font.css">
-</pre>
-</div> -->
-
 
 <article>
     <!-- <span style="letter-spacing: -23px; font-size: xx-large;">&nearr;&swarr;</span> -->
@@ -250,7 +243,7 @@ width="15px" height="15px" viewBox="0 0 512 400" version="1.1" xmlns="http://www
 <div style="display: flex; flex-direction: column; align-items: center; font-family: BDLifelessGrotesk;; position: sticky; top:0; background-color: white; padding: 1em 0;">    
 
     <div id="fontSearchWrapper" style="display: flex; width: 100%;">
-        <input id="fontSearch" style="margin: 0 auto 1rem 0; width: 100%; border: none; padding: .5rem 0;" type="search" name="" id="" placeholder="🔍 Look up font names..." >
+        <input id="fontSearch" style="background-color: transparent; font-size: 16px; margin: 0 auto 1rem 0; width: 100%; border: none; padding: .5rem 0;" type="search" name="" id="" placeholder="Look up font names..." >
         <!-- 🔍 -->
     </div>
 
@@ -267,9 +260,9 @@ width="15px" height="15px" viewBox="0 0 512 400" version="1.1" xmlns="http://www
         <!-- format_letter_spacing_2 -->
     </label>
     <input type="range" id="letterSpaceRange" name="letterSpaceRange" min="-3" max="5" step="0.1" value="0">
-    <input type="color" id="colorPicker" style="margin:0 1vw;">
+    <input type="color" id="colorPicker" style="margin:0 1rem;">
     <button title="reset all"
-    style="padding: .5rem .75rem ; border: none; border-radius: 1rem; margin-left: 1rem; font-family: inter; background-color: #eee; cursor: pointer;" 
+    style="color:inherit; padding: .5rem .75rem ; border: none; border-radius: 1rem; font-family: inter; background-color: #eee; cursor: pointer;" 
     onclick='reset()' onmouseenter="this.style.backgroundColor='#ddd'" onmouseleave="this.style.backgroundColor='#eee'">↻</button>
 
     </div>
