--- a/index.html
+++ b/index.html
@@ -277,6 +277,11 @@ background-color: var(--bc); color:var(--tc); padding: 2vh var(--hp);z-index: 3;
         <a href="https://xolyn.github.io/fg2.html">Font Studio</a>
         <!-- <a href="https://xolyn.github.io/widgets">Gadgetz</a> -->
         <a href="https://zly.vg/cv.pdf">Résumé</a>
+        <span style="font-weight: 400;">&nbsp;</span>
+        <span style="font-weight: 500;">&nbsp;</span>
+        <span style="font-weight: 600;">&nbsp;</span>
+        <span style="font-weight: 700;">&nbsp;</span>
+        <span style="font-weight: 800;">&nbsp;</span>
     </div>
 
     <div id="mobMenuTogg" style="margin: auto 0; cursor: pointer; border-radius: .2rem; padding: .3rem .5rem; transition: .3s;"
@@ -513,13 +518,8 @@ background-color: var(--bc); color:var(--tc); padding: 2vh var(--hp);z-index: 3;
     <div style="width: 100%; display: flex;">
     <article style="margin-right: auto;">
     &copy; Lingyu Zhou 2024
-    <span style="font-weight: 400;">&nbsp;</span>
-    <span style="font-weight: 500;">&nbsp;</span>
-    <span style="font-weight: 600;">&nbsp;</span>
-    <span style="font-weight: 700;">&nbsp;</span>
-    <span style="font-weight: 800;">&nbsp;</span>
 
-    <p style="line-height: 150%;">
+    <p style="line-height: 150%; width: fit-content;">
         <a href="ghp-report@zly.vg" style="color: grey">Report a problem</a>
         <br>
         <a href="javascript: void(0)" style="color: grey" onclick="myModal.style.display='flex'">Terms and policies</a>
