--- a/fontcss.html
+++ b/fontcss.html
@@ -492,6 +492,11 @@ width="15px" height="15px" viewBox="0 0 512 400" version="1.1" xmlns="http://www
         </fieldset>
 
         <fieldset>
+            <legend id="var">ebay</legend>
+            <div style="font-family:ebay;" class="usrtxt" contenteditable ></div>
+        </fieldset>
+
+        <fieldset>
             <legend >psu</legend>
             <div style="font-family:psu;" class="usrtxt" contenteditable ></div>
         </fieldset>
