--- a/index.html
+++ b/index.html
@@ -277,11 +277,6 @@ background-color: var(--bc); color:var(--tc); padding: 2vh var(--hp);z-index: 3;
         <a href="https://xolyn.github.io/fg2.html">Font Studio</a>
         <!-- <a href="https://xolyn.github.io/widgets">Gadgetz</a> -->
         <a href="https://zly.vg/cv.pdf">Résumé</a>
-        <span style="font-weight: 400;">&nbsp;</span>
-        <span style="font-weight: 500;">&nbsp;</span>
-        <span style="font-weight: 600;">&nbsp;</span>
-        <span style="font-weight: 700;">&nbsp;</span>
-        <span style="font-weight: 800;">&nbsp;</span>
     </div>
 
     <div id="mobMenuTogg" style="margin: auto 0; cursor: pointer; border-radius: .2rem; padding: .3rem .5rem; transition: .3s;"
@@ -310,7 +305,11 @@ background-color: var(--bc); color:var(--tc); padding: 2vh var(--hp);z-index: 3;
         My research interests are computational social science and affective computing, particularly in using data science methods and natural language processing to model and analyze emotional and behavioral trends within large-scale social networks. My goal is to explore how computational models can provide insights into social phenomena, group dynamics, and collective emotions, utilizing vast social media data to understand real-world interactions and sentiments. This area lies at the intersection of statistical modeling, machine learning, and NLP, with applications in prediction of social behavior, sentiment analysis, and trend forecasting.
 
         
-        I am also interested in biology, botany, and etymology.
+        I am also interested in biology, botany, and etymology.         <span style="font-weight: 400;">&nbsp;</span>
+        <span style="font-weight: 500;">&nbsp;</span>
+        <span style="font-weight: 600;">&nbsp;</span>
+        <span style="font-weight: 700;">&nbsp;</span>
+        <span style="font-weight: 800;">&nbsp;</span>
     </p>
 </article>
 
@@ -453,7 +452,7 @@ background-color: var(--bc); color:var(--tc); padding: 2vh var(--hp);z-index: 3;
         <li>Detail matters.</li>
         <li>Never too late to act.</li>
         <li>Simplicity is the ultimate sophistication.</li>
-        <li>Live in the present.</li>
+        <li>Life is now.</li>
     </ul>
 </article>
 
@@ -625,7 +624,9 @@ const quotes =
     ['Imagination is the one weapon in the war against reality.', "Jacob (<i>Pirates of the Caribbean: Dead Man's Chest</i>, 2006)"],
     ['And by the way, everything in life is writable about if you have the outgoing guts to do it, and the imagination to improvise it.', "Sylvia Plath (<i>The Bell Jar</i>)"],
     ['Do not go where the path may lead, go instead where there is no path and leave a trail.', 'Ralph Waldo Emerson'],
-    ['The eagle that soars in the upper air does not worry itself how it is to cross rivers.','Issac Newton']
+    ['The eagle that soars in the upper air does not worry itself how it is to cross rivers.','Issac Newton'],
+    ['The world is your oyster.','William Shakespeare'],
+    ["Courage is grace under pressure.", 'Ernest Hemingway']
     // ['b', 'B'],
 ];
 const q = quotes[Math.floor(Math.random() * quotes.length)];
