--- a/fontcss.html
+++ b/fontcss.html
@@ -171,7 +171,7 @@ label{
     cursor: pointer;
 }
 
-label:hover, input[type=radio]:checked+label {
+input[type=radio]+label:hover, input[type=radio]:checked+label {
     background-color: #eee;
 }
 
@@ -265,14 +265,14 @@ width="15px" height="15px" viewBox="0 0 512 400" version="1.1" xmlns="http://www
     You can click on names followed by an asterisk (＊) to see its bolder font weight.
 </p>
 
-<div style="display: flex; flex-direction: column; align-items: center; font-family: BDLifelessGrotesk;; position: sticky; top:0; background-color: white; padding: 1em 0;">    
+<div style="display: flex; flex-direction: column; align-items: center; font-family: BDLifelessGrotesk;; position: sticky; top:0; background-color: white; padding: .75em 0;">    
 
     <div id="fontSearchWrapper" style="display: flex; width: 100%;">
-        <input id="fontSearch" style="font-family: var(--ff); background-color: transparent; font-size: 16px; margin: 0 auto 1rem 0; width: 100%; border: none; padding: .5rem 0;" type="search" name="" id="" placeholder="Search font names..." >
+        <input id="fontSearch" style="font-family: var(--ff); background-color: transparent; font-size: 16px; margin: 0 auto 0 0; width: 100%; border: none; padding: .5rem 0;" type="search" name="" id="" placeholder="Search font names..." >
         <!-- 🔍 -->
     </div>
 
-    <div style="width: 100%; display: flex; align-items: center; max-width: 100%; box-sizing: border-box; overflow-x: auto;">    
+<div style="width: 100%; display: flex; align-items: center; max-width: 100%; box-sizing: border-box; overflow-x: auto; padding: 5px 0;">    
     <label translate="no" for="fontSizeRange" style="">A&updownarrow;</label>
     <!-- &#10530; -->
     <input title="Font size" type="range" id="fontSizeRange" name="fontSizeRange" min="5" max="95" value="32">
